--- a/DocSearch2.1/Content/Site.css
+++ b/DocSearch2.1/Content/Site.css
@@ -1,19 +1,24 @@
-﻿body {
+﻿#body {
+
+}
+
+#main-row {
 
 }
 
 ul {
     list-style-type: none;
+    font-size: 15px;
     margin: 0;
-    padding: 0;
+    padding-left: 10px;
     width: auto;
     background-color: #f1f1f1;
 }
 
 li a {
-    display: block;
+    /*display: block;
     color: #000;
-    padding: 8px 16px;
+    padding: 8px 16px;*/
     text-decoration: none;
 }
 
@@ -29,15 +34,15 @@ li a:hover {
 }
 
 #body {
-    display: flex;
+    /*display: flex;*/
 }
 
 #public_navigation {
-    width: 150px;
+    /*width: 150px;*/
 }
 
 #public_navigation {
-    width: 300px;
+    /*width: 300px;*/
 }
 
 .hidden {
@@ -119,3 +124,39 @@ li a:hover {
     background: red;
     display: none;
 }*/
+
+#docType_list li a{
+    font-size: 80%;
+    text-align: center;
+    list-style-type: circle;
+}
+
+.buttondiv {
+    height: 60px;
+}
+
+a.button {
+     background: url(../Images/clear.png) no-repeat bottom left;
+     display: block;
+     background-size: 60px 20px;
+     height: inherit;
+     /*background-repeat: no-repeat;*/
+     text-indent: -9999px;
+}
+
+#abc, table {
+    width: 100%;
+    padding: 0;
+}
+
+.pagedList {
+    
+}
+
+.pagination{
+
+}
+
+.pagination{
+
+}
