--- a/DocSearch2.1/Views/Shared/_Layout.cshtml
+++ b/DocSearch2.1/Views/Shared/_Layout.cshtml
@@ -11,6 +11,9 @@
     @Scripts.Render("~/bundles/modernizr") <!--modernizr must be in head of script-->
 </head>
 <body>
+    <header>
+
+    </header>
     <div id="body" class="container-fluid"><!-- content-wrapper main-content clear-fix-->
         @RenderBody()
     </div>
