--- a/DocSearch2.1/Views/PublicVM/Index.cshtml
+++ b/DocSearch2.1/Views/PublicVM/Index.cshtml
@@ -158,7 +158,7 @@
                        }, new AjaxOptions
                        {
                            HttpMethod = "GET",
-                           InsertionMode = InsertionMode.Replace,
+                           InsertionMode = InsertionMode.ReplaceWith,
                            UpdateTargetId = "public_table",
                            OnComplete = "clearFields" //will need to clear form fields
                        }, new { @class = "button" })
