--- a/DocSearch2.1/Views/PublicVM/_PublicTable.cshtml
+++ b/DocSearch2.1/Views/PublicVM/_PublicTable.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IPagedList<PublicVM>
 
 <div id="public_table" class="row">
-    <div class="col-md-12">
+    <div id ="public_table_inner" class="col-md-12">
         <table class="table-bordered">
             <tr>
                 <th>
