--- a/DocSearch2.1/Views/PublicVM/Index.cshtml
+++ b/DocSearch2.1/Views/PublicVM/Index.cshtml
@@ -36,8 +36,9 @@
                         $this = $(this);
 
                         $this.closest('form').find("input[type=search]").val("");
-                        $this.closest('form').find("input[name='IssueDateMinRange']").val("@Model.OrderBy(d => d.IssueDate).First().IssueDate.Value.ToShortDateString()");
-                        $this.closest('form').find("input[name='IssueDateMaxRange']").val("@Model.OrderByDescending(d => d.IssueDate).First().IssueDate.Value.ToShortDateString()");
+
+                        $this.closest('form').find("input[name='IssueDateMinRange']").val('@Model.OrderBy(d => d.IssueDate).First().IssueDate.Value.ToString("MM/dd/yyyy", CultureInfo.InvariantCulture)');
+                        $this.closest('form').find("input[name='IssueDateMaxRange']").val('@Model.OrderByDescending(d => d.IssueDate).First().IssueDate.Value.ToString("MM/dd/yyyy", CultureInfo.InvariantCulture)');
                     }
                 </script>
 
@@ -144,11 +145,11 @@
                 </div>
                 <div class="filter col-md-3">
                     Low Range Date: 
-                    @Html.TextBox("IssueDateMinRange", String.Format("{0:d}", Model.OrderBy(d => d.IssueDate).First().IssueDate.Value.ToShortDateString()), new { @class = "datefield", type = "date" })
+                    @Html.TextBox("IssueDateMinRange", String.Format("{0:d}", Model.OrderBy(d => d.IssueDate).First().IssueDate.Value), new { @class = "datefield", type = "date" })
                 </div>
                 <div class="filter col-md-3">
                     High Range Date: 
-                    @Html.TextBox("IssueDateMaxRange", String.Format("{0:d}", Model.OrderByDescending(d => d.IssueDate).First().IssueDate.Value.ToShortDateString()), new { @class = "datefield", type = "date" })
+                    @Html.TextBox("IssueDateMaxRange", String.Format("{0:d}", Model.OrderByDescending(d => d.IssueDate).First().IssueDate.Value), new { @class = "datefield", type = "date" })
                 </div>
 
                 <div class="filter col-md-2 buttondiv">
