--- a/DocSearch2.1/Views/Shared/_Layout.cshtml
+++ b/DocSearch2.1/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
     <div id="body" class="container-fluid"><!-- content-wrapper main-content clear-fix-->
         @RenderBody()
     </div>
+    <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
     @Scripts.Render("~/bundles/otf")
     @RenderSection("CustomScripts", false)
 </body>
